--- a/src/main/resources/db/changelog/db.changelog-012-refactor.yaml
+++ b/src/main/resources/db/changelog/db.changelog-012-refactor.yaml
@@ -92,7 +92,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 4
+                  value: "4"
               - column:
                   name: name
                   value: Import
